# demo-app

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  frontend-nginx.conf  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yaml  build-and-push.yml  docker-ci-cd.yaml
Blueprint/: backup-sanitization.yaml
backend/: Dockerfile  main.py  requirements.txt
demo/: data-sanitization.md  nginx-to-gateway_api.md  nginx-treafik.md
demo/blueprint/: backup-sanitization.yaml
demo/gateway-api/: gateway-cilium.yaml
demo/k8s-base-install/: install-demo-app-offline.yaml  install-demo-app.yaml
demo/nginx-demo/: nginx-ingress.yaml  svc-clusterip.yaml  treafik-transformSet.yaml  treafik_example.yaml
demo/safespring/: letsencrypt.yaml  nginx-letsencrypt.yaml
demo/transformsets/: rename-ingress.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  app.css
k8s/: 1.2-secret.yaml  1.3-config.yaml  2.0-pv.yaml  2.0-pv.yaml.txt  2.1-pvc.yaml  2.2-deployment.yaml  2.3-svc.yaml  2.secrets.yaml  3.1-deployment.yaml  3.2-svc.yaml  3.configmap.yaml  4.pvc.yaml  5.stateful-postgres.yaml  6.svc.yaml  7.deployment-demo-app.yaml
tests/: test_agentic_ai.py
