[project]
name = "demo-app"
version = "0.1.0"
description = "FastAPI + PostgreSQL Setup Guide (Ubuntu/Virtual Env with Docker DB)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=37.11.0",
    "fastapi[all]>=0.119.1",
    "psycopg[binary]>=3.2.11",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
